# MPSO

./: CMakeLists.txt  LICENSE  README.md  blank
common/: permute.cpp  permute.h
mpso/: MPSI.cpp  MPSI.h  MPSIC.cpp  MPSIC.h  MPSICS.cpp  MPSICS.h  MPSU.cpp  MPSU.h  PMT.cpp  PMT.h  ROT.cpp  ROT.h
offlineGen/: BeaverTriplesGen.cpp  BeaverTriplesGen.h  BoolTriplesGen.cpp  BoolTriplesGen.h  PreGen.cpp  PreGen.h  RotGen.cpp  RotGen.h  VoleGen.cpp  VoleGen.h
shell_for_test/: mpsoRunControl.sh  run_mpsi.sh  run_mpsic.sh  run_mpsics.sh  run_mpsu.sh
shuffle/: MShuffle.cpp  MShuffle.h  ShareCorrelationGen.cpp  ShareCorrelationGen.h
test/: test_mpsi.cpp  test_mpsic.cpp  test_mpsics.cpp  test_mpsu.cpp
